creating tabs switching script,and changes settings follow links  in footer.scss

--- a/blog.html
+++ b/blog.html
@@ -131,10 +131,11 @@
                     <div class="footer__follow-links">
                         <h3 class="title-h3-static footer__title">follow us</h3>
                         <div class="footer__follow-img">
-                            <span class="icon-facebook"></span>
-                            <span class="icon-instagram"></span>
-                            <span class="icon-pinterest-circled"></span>
-                        </div>
+                            <a class="icon-facebook" href="https://www.facebook.com"></a>
+                            <a class="icon-instagram" href="https://www.instagram.com"></a>
+                            <a class="icon-pinterest-circled"
+                                href="https://www.pinterest.com/search/pins/?q=ceramic%20vase&rs=ac&len=7&source_id=ac_zrgr7KU3&eq=Ceramic&etslf=7075"></a>
+                        </div>      
                     </div>
                 </div>
             </div>
