--- a/catalog.html
+++ b/catalog.html
@@ -53,9 +53,9 @@
             </div>
             <h1 class="title-h1 catalog__title">our pottery</h1>
             <div class="catalog__tabs">
-                <button class="catalog__tab catalog__tab_active">for tea</button>
-                <button class="catalog__tab">for kitchen</button>
-                <button class="catalog__tab">for plants</button>
+                <button class="catalog__tab catalog__tab_active tea">for tea</button>
+                <button class="catalog__tab kitchen">for kitchen</button>
+                <button class="catalog__tab plants">for plants</button>
             </div>
             <div class="catalog__content-tea">
                 <div class="catalog__content-item">
@@ -91,6 +91,47 @@
                     <div class="catalog__item-description">
                         <p class="catalog__item-text">Solace Set</p>
                         <p class="catalog__item-price">29.99 €</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="catalog__content-kitchen hidden">
+                <div class="catalog__content-item">
+                    <img class="catalog__content-img" src="/src/img/works/tea-3.jpg" alt="tea">
+                    <div class="catalog__item-description">
+                        <p class="catalog__item-text">Earthen Grace</p>
+                        <p class="catalog__item-price">16.99 €</p>
+                    </div>
+                </div>
+                <div class="catalog__content-item">
+                    <img class="catalog__content-img" src="/src/img/form/tea.jpg" alt="tea">
+                    <div class="catalog__item-description">
+                        <p class="catalog__item-text">Solace Set</p>
+                        <p class="catalog__item-price">29.99 €</p>
+                    </div>
+                </div>
+                <div class="catalog__content-item">
+                    <img class="catalog__content-img" src="/src/img/works/tea-1.jpg" alt="tea">
+                    <div class="catalog__item-description">
+                        <p class="catalog__item-text">Moss & Moon</p>
+                        <p class="catalog__item-price">21.99 €</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="catalog__content-plants hidden">
+                <div class="catalog__content-item">
+                    <img class="catalog__content-img" src="/src/img/works/tea-2.jpg" alt="tea">
+                    <div class="catalog__item-description">
+                        <p class="catalog__item-text">Clay Bloom</p>
+                        <p class="catalog__item-price">24.99 €</p>
+                    </div>
+                </div>
+                <div class="catalog__content-item">
+                    <img class="catalog__content-img" src="/src/img/works/tea-3.jpg" alt="tea">
+                    <div class="catalog__item-description">
+                        <p class="catalog__item-text">Earthen Grace</p>
+                        <p class="catalog__item-price">16.99 €</p>
                     </div>
                 </div>
             </div>
@@ -138,10 +179,11 @@
                     <div class="footer__follow-links">
                         <h3 class="title-h3-static footer__title">follow us</h3>
                         <div class="footer__follow-img">
-                            <span class="icon-facebook"></span>
-                            <span class="icon-instagram"></span>
-                            <span class="icon-pinterest-circled"></span>
-                        </div>
+                            <a class="icon-facebook" href="https://www.facebook.com"></a>
+                            <a class="icon-instagram" href="https://www.instagram.com"></a>
+                            <a class="icon-pinterest-circled"
+                                href="https://www.pinterest.com/search/pins/?q=ceramic%20vase&rs=ac&len=7&source_id=ac_zrgr7KU3&eq=Ceramic&etslf=7075"></a>
+                        </div>       
                     </div>
                 </div>
             </div>
