--- a/index.html
+++ b/index.html
@@ -233,16 +233,16 @@
 								<div class="footer__nav-blocks">
 									<h3 class="title-h3-static footer__title">information</h3>
 									<div class="footer__link-wrapper">
-										<a href="#">Terms and Conditions</a>
+										<a href="terms.html">Terms and Conditions</a>
 									</div>
 								</div>
 							</div>
 							<div class="footer__follow-links">
 								<h3 class="title-h3-static footer__title">follow us</h3>
 								<div class="footer__follow-img">
-									<span class="icon-facebook"></span>
-									<span class="icon-instagram"></span>
-									<span class="icon-pinterest-circled"></span>
+									<a class="icon-facebook" href="https://www.facebook.com"></a>
+									<a class="icon-instagram" href="https://www.instagram.com"></a>
+									<a class="icon-pinterest-circled" href="https://www.pinterest.com/search/pins/?q=ceramic%20vase&rs=ac&len=7&source_id=ac_zrgr7KU3&eq=Ceramic&etslf=7075"></a>
 								</div>
 							</div>
 						</div>
